Data transfer modifier doesn't transfer per face corner normal data. #114822

Closed
opened 2023-11-14 00:42:11 +01:00 by Nahuel Belich · 2 comments

System Information
Operating system: Linux-6.2.0-36-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-13 22:35, hash: f74ed4d45dac
Worked: 4.1.0 Alpha, branch: main, commit date: 2023-10-04 19:32, hash: 3bbd4294d939

Short description of error
Left working properly - Right not working
Screenshot from 2023-11-13 19-59-24.png

Exact steps for others to reproduce the error
Just open the file, it should work properly in an "older" 4.1 version, probably before removing the auto smooth but im not sure about the date.

Transfer normals bug.blend

**System Information** Operating system: Linux-6.2.0-36-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-13 22:35, hash: `f74ed4d45dac` Worked: 4.1.0 Alpha, branch: main, commit date: 2023-10-04 19:32, hash: `3bbd4294d939` **Short description of error** Left working properly - Right not working ![Screenshot from 2023-11-13 19-59-24.png](/attachments/f4ee6fc7-110c-41c4-b31b-d701c226863c) **Exact steps for others to reproduce the error** Just open the file, it should work properly in an "older" 4.1 version, probably before removing the auto smooth but im not sure about the date. [Transfer normals bug.blend](/attachments/251f2b8f-8305-4c11-b68b-c58ce11d1884)
Nahuel Belich added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-14 00:42:12 +01:00

931c176b06

Thank you for the report, @NahuelBelich. I can confirm the regression.

I'm checking where the problem was introduced.

931c176b06153522bba03a5c3d1bf78374713819 Thank you for the report, @NahuelBelich. I can confirm the regression. I'm checking where the problem was introduced.

Seems to have been caused by 89e3ba4e25

@HooglyBoogly, can you check?

Seems to have been caused by 89e3ba4e25 @HooglyBoogly, can you check?
Hans Goudey self-assigned this 2023-11-14 08:16:57 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-16 11:42:42 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114822
No description provided.