Fix #114822: Data transfer modifier doesn't work for face corner normals

In 89e3ba4e25c9ff921b25, the preprocess step was removed because the
normals are lazily calculated. But now we need to fetch the source normals
from the correct placed-- they still were looked for in `CD_NORMAL`.